--- a/Portfolio/Pages/Index.razor
+++ b/Portfolio/Pages/Index.razor
@@ -4,5 +4,7 @@
 @using System.IO
 
 <h1>Hello, world!</h1>
-
-@((MarkupString)Markdown.ToHtml(new StreamReader(Assembly.GetExecutingAssembly().GetManifestResourceStream("Portfolio.Pages.Test.md")).ReadToEnd()))
+@foreach (var manifestResourceName in Assembly.GetExecutingAssembly().GetManifestResourceNames())
+{
+    <p>@manifestResourceName</p>
+}
