Update README.md. Add learning goal drafts. Add index page. Add WIP contact page. Added index page to navigation bar.

--- a/Portfolio/Pages/Content.razor
+++ b/Portfolio/Pages/Content.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Content/{Document}"
 @page "/Content/{Category}/{Document}"
 @page "/Content/{Category}/{Folder}/{Document}"
+@using System.Diagnostics
 
 @inject IDocumentService DocumentService
 
@@ -12,6 +13,7 @@
     }
     else
     {
+        Debug.Print($"Can't find file: {GetPath()}");
         <_404/>
     }
 }
