--- a/Portfolio/Pages/Contact.razor
+++ b/Portfolio/Pages/Contact.razor
@@ -1,7 +1,49 @@
 ﻿@page "/Contact"
+@using System.ComponentModel.DataAnnotations
+@using Markdig
+@inject IJSRuntime JsRuntime
 
-<h3>Contact</h3>
+@((MarkupString)Markdown.ToHtml(@"
+
+# Contact
+Mocht u contact met mij willen opnemen, dan kan dit via het onderstaande formulier. Ik zal zo snel mogelijk reageren.
+Ook ben ik te bereiken via [email](mailto:n.vandekerkhof@outlook.com)
+
+"))
+
+<EditForm Model="@Input" OnValidSubmit="Send">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+
+    <p></p>
+    Emailaddress
+    <p></p>
+    <InputText @bind-Value="Input.Email"></InputText>
+    <p></p>
+    Uw bericht
+    <p></p>
+    <InputTextArea @bind-Value="Input.Content"></InputTextArea>
+    <p></p>
+    <button type="submit">Versturen</button>
+</EditForm>
 
 @code {
 
+    private class InputForm
+    {
+        [Required(ErrorMessage = "Een emailaddress is verplicht.")]
+        [EmailAddress(ErrorMessage = "Dit is geen geldig emailaddress.")]
+        public string Email { get; set; }
+
+        [Required(AllowEmptyStrings = false, ErrorMessage = "Lege berichten zijn niet toegestaan.")]
+        public string Content { get; set; }
+    }
+
+    private InputForm Input { get; set; } = new InputForm();
+
+    private void Send()
+    {
+        //TODO: Actually send the message lol.
+        JsRuntime.InvokeVoidAsync("alert", "Het bericht is verzonden.");
+    }
 }
