--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -11,6 +11,12 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
+            <NavLink class="nav-link" href="Content/Stage3/Index" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> 3rdejaars Stage
+            </NavLink>
+            <NavLink class="nav-link" href="Contact" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Contact
+            </NavLink>
         </li>
     </ul>
 </div>
