Fix internship navlink not staying active when browsing to a subpage belonging to that category.

--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-            <NavLink class="nav-link" href="Content/Stage3/Index" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="Content/Stage3" Match="NavLinkMatch.Prefix">
                 <span class="oi oi-home" aria-hidden="true"></span> 3rdejaars Stage
             </NavLink>
             <NavLink class="nav-link" href="Contact" Match="NavLinkMatch.All">
