Add stageopdracht. Fix broken link to contact page on 404 page. Fix CI/CD pipeline order in leerdoel 8

--- a/Portfolio/Pages/_404.razor
+++ b/Portfolio/Pages/_404.razor
@@ -3,6 +3,6 @@
 
 # Deze pagina bestaat niet.
 
-Verwachtte u hier iets te vinden? [Stuur mij een bericht](/Contact)
+Verwachtte u hier iets te vinden? [Stuur mij een bericht](/Portfolio/Contact)
 
 "))
