WIP MatBlazor integration

--- a/Portfolio/Pages/Contact.razor
+++ b/Portfolio/Pages/Contact.razor
@@ -41,6 +41,9 @@ Ook ben ik te bereiken via [email](mailto:n.vandekerkhof@outlook.com)
 
     private InputForm Input { get; set; } = new InputForm();
 
+    /// <summary>
+    /// Sends the email.
+    /// </summary>
     private void Send()
     {
         //TODO: Actually send the message lol.
