--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -5,68 +5,34 @@
     </button>
 </div>*@
 
-@using Microsoft.AspNetCore.Components
-
-<MatNavMenu Style="background: lightgray;">
-    <MatNavItem><MatIcon Icon="house"></MatIcon>&nbsp; Home </MatNavItem>
-    <MatDivider></MatDivider>
-    <MatNavSubMenu>
-        <MatNavSubMenuHeader>
-            <MatNavItem AllowSelection="false"><MatIcon Icon="all_inbox"></MatIcon>&nbsp; 3rdejaars Stage</MatNavItem>
-        </MatNavSubMenuHeader>
-        <MatNavSubMenuList>
-            <MatNavItem Href="#">Item 3.A&nbsp; <MatIcon Icon="backup"></MatIcon></MatNavItem>
-            <MatNavItem>Item 3.B&nbsp; <MatIcon Icon="build"></MatIcon></MatNavItem>
-            <MatNavSubMenu>
-                <MatNavSubMenuHeader>
-                    <MatNavItem AllowSelection="false"><MatIcon Icon="all_inbox"></MatIcon>Leerdoelen</MatNavItem>
-                </MatNavSubMenuHeader>
-                <MatNavSubMenuList>
-                    <MatNavItem Href="#">Item 3.A&nbsp; <MatIcon Icon="backup"></MatIcon></MatNavItem>
-                    <MatNavItem>Item 3.B&nbsp; <MatIcon Icon="build"></MatIcon></MatNavItem>
-                    <MatNavItem>Item 3.C&nbsp; <MatIcon Icon="explore"></MatIcon></MatNavItem>
-                </MatNavSubMenuList>
-            </MatNavSubMenu>
-        </MatNavSubMenuList>
-    </MatNavSubMenu>
-    <MatDivider></MatDivider>
-    <MatNavItem><MatIcon Icon="alternate_email"></MatIcon>Contact</MatNavItem>
+<MatNavMenu Multi="true">
+	<MatNavItem><MatIcon Icon="house"></MatIcon>&nbsp; Home </MatNavItem>
+	<MatDivider></MatDivider>
+	<MatNavSubMenu>
+		<MatNavSubMenuHeader>
+			<MatNavItem AllowSelection="false"><MatIcon Icon="assignment"></MatIcon>&nbsp; 3rdejaars Stage</MatNavItem>
+		</MatNavSubMenuHeader>
+		<MatNavSubMenuList>
+			<MatNavItem Href="/Content/Stage3"><MatIcon Icon="build"></MatIcon>Inleiding&nbsp; </MatNavItem>
+			<MatNavSubMenu>
+				<MatNavSubMenuHeader>
+					<MatNavItem AllowSelection="false"><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
+				</MatNavSubMenuHeader>
+				<MatNavSubMenuList>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/1"><MatIcon Icon="bookmark"></MatIcon>1 - SVN.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/2"><MatIcon Icon="bookmark"></MatIcon>2 - Nieuwe Technologie.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/3"><MatIcon Icon="bookmark"></MatIcon>3 - Projecten Analyseren.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/4"><MatIcon Icon="bookmark"></MatIcon>4 - Advies.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/5"><MatIcon Icon="bookmark"></MatIcon>5 - Testen.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/6"><MatIcon Icon="bookmark"></MatIcon>6 - Ideeën uitwerken.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/7"><MatIcon Icon="bookmark"></MatIcon>7 - Design Patterns.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/8"><MatIcon Icon="bookmark"></MatIcon>8 - CI/CD.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/9"><MatIcon Icon="bookmark"></MatIcon>9 - Regels & Procedures.A&nbsp; </MatNavItem>
+					<MatNavItem Href="/Content/Stage3/Leerdoelen/10"><MatIcon Icon="bookmark"></MatIcon>10 - Design.A&nbsp; </MatNavItem>
+				</MatNavSubMenuList>
+			</MatNavSubMenu>
+		</MatNavSubMenuList>
+	</MatNavSubMenu>
+	<MatDivider></MatDivider>
+	<MatNavItem Href="/Contact"><MatIcon Icon="alternate_email"></MatIcon>Contact</MatNavItem>
 </MatNavMenu>
-
-@*<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-        <ul class="nav flex-column">
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span> Home
-                </NavLink>
-                <NavLink class="nav-link" href="Content/Stage3" Match="NavLinkMatch.Prefix">
-                    <span class="oi oi-home" aria-hidden="true"></span> 3rdejaars Stage
-                </NavLink>
-                <NavLink class="nav-link" href="Contact" Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span> Contact
-                </NavLink>
-            </li>
-        </ul>
-    </div>*@
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-
-
-    [Inject] IJSRuntime JS { get; set; }
- 
-    bool navSubMenuOpenState;
- 
-    async Task ClickMe()
-    {
-        Console.WriteLine("test");
-        await JS.InvokeAsync<object>("alert", "Successful OnClick!");
-    }
-}
