--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -6,33 +6,33 @@
 </div>*@
 
 <MatNavMenu Multi="true">
-	<MatNavItem><MatIcon Icon="house"></MatIcon>&nbsp; Home </MatNavItem>
+	<MatNavItem Href="" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="house"></MatIcon>&nbsp; Home </MatNavItem>
 	<MatDivider></MatDivider>
 	<MatNavSubMenu>
 		<MatNavSubMenuHeader>
-			<MatNavItem AllowSelection="false"><MatIcon Icon="assignment"></MatIcon>&nbsp; 3rdejaars Stage</MatNavItem>
+			<MatNavItem AllowSelection="false" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="assignment"></MatIcon>&nbsp; 3rdejaars Stage</MatNavItem>
 		</MatNavSubMenuHeader>
 		<MatNavSubMenuList>
-			<MatNavItem Href="/Content/Stage3"><MatIcon Icon="build"></MatIcon>Inleiding&nbsp; </MatNavItem>
+			<MatNavItem Href="Content/Stage3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="build"></MatIcon>Inleiding&nbsp; </MatNavItem>
 			<MatNavSubMenu>
 				<MatNavSubMenuHeader>
-					<MatNavItem AllowSelection="false"><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
+					<MatNavItem AllowSelection="false" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
 				</MatNavSubMenuHeader>
 				<MatNavSubMenuList>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/1"><MatIcon Icon="bookmark"></MatIcon>1 - SVN.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/2"><MatIcon Icon="bookmark"></MatIcon>2 - Nieuwe Technologie.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/3"><MatIcon Icon="bookmark"></MatIcon>3 - Projecten Analyseren.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/4"><MatIcon Icon="bookmark"></MatIcon>4 - Advies.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/5"><MatIcon Icon="bookmark"></MatIcon>5 - Testen.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/6"><MatIcon Icon="bookmark"></MatIcon>6 - Ideeën uitwerken.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/7"><MatIcon Icon="bookmark"></MatIcon>7 - Design Patterns.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/8"><MatIcon Icon="bookmark"></MatIcon>8 - CI/CD.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/9"><MatIcon Icon="bookmark"></MatIcon>9 - Regels & Procedures.A&nbsp; </MatNavItem>
-					<MatNavItem Href="/Content/Stage3/Leerdoelen/10"><MatIcon Icon="bookmark"></MatIcon>10 - Design.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>1 - SVN.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>2 - Nieuwe Technologie.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>3 - Projecten Analyseren.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>4 - Advies.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>5 - Testen.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>6 - Ideeën uitwerken.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>7 - Design Patterns.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>8 - CI/CD.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>9 - Regels & Procedures.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>10 - Design.A&nbsp; </MatNavItem>
 				</MatNavSubMenuList>
 			</MatNavSubMenu>
 		</MatNavSubMenuList>
 	</MatNavSubMenu>
 	<MatDivider></MatDivider>
-	<MatNavItem Href="/Contact"><MatIcon Icon="alternate_email"></MatIcon>Contact</MatNavItem>
+	<MatNavItem Href="Contact"><MatIcon Icon="alternate_email"></MatIcon>Contact</MatNavItem>
 </MatNavMenu>
