--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -19,16 +19,16 @@
 					<MatNavItem AllowSelection="false" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
 				</MatNavSubMenuHeader>
 				<MatNavSubMenuList>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>1 - SVN.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>2 - Nieuwe Technologie.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>3 - Projecten Analyseren.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>4 - Advies.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>5 - Testen.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>6 - Ideeën uitwerken.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>7 - Design Patterns.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>8 - CI/CD.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>9 - Regels & Procedures.A&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"></MatIcon>10 - Design.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>1 - SVN.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>2 - Nieuwe Technologie.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>3 - Projecten Analyseren.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>4 - Advies.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>5 - Testen.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>6 - Ideeën uitwerken.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>7 - Design Patterns.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>8 - CI/CD.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>9 - Regels & Procedures.A&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark"/>10 - Design.A&nbsp; </MatNavItem>
 				</MatNavSubMenuList>
 			</MatNavSubMenu>
 		</MatNavSubMenuList>
