Content changes. Style tweaks. Added unit tests for DocumentService.

--- a/Portfolio/Pages/Content.razor
+++ b/Portfolio/Pages/Content.razor
@@ -10,7 +10,7 @@
     var document = DocumentService.GetDocument(GetPath());
     if (document != null)
     {
-        <div>@((MarkupString)document)</div>
+        @((MarkupString)document)
     }
     else
     {
