--- a/Portfolio/Shared/MainLayout.razor
+++ b/Portfolio/Shared/MainLayout.razor
@@ -40,12 +40,17 @@
 
 		<MatDrawerContent Class="mdc-theme--background">
 			<MatAppBarAdjust></MatAppBarAdjust>
-			<div class="body-wrapper">
-				@Body
-			</div>
+				<div style="
+					padding-top: 40px;
+					padding-left: 50px;
+					padding-right: 500px;
+					padding-bottom: 40px;
+				">
+					@Body
+				</div>
 		</MatDrawerContent>
-	</MatDrawerContainer>
 
+	</MatDrawerContainer>
 </MatThemeProvider>
 
 
