Content updates. Styling tweaks. Fix navbar evidence links pointing to leerdoel docs instead of evidence docs

--- a/Portfolio/Pages/Contact.razor
+++ b/Portfolio/Pages/Contact.razor
@@ -20,11 +20,11 @@ Ook ben ik te bereiken via [email](mailto:n.vandekerkhof@outlook.com)
 	<p></p>
 	Emailaddress
 	<p></p>
-	<InputText @bind-Value="Input.Email"></InputText>
+	<InputText @bind-Value="Input.Email"></InputText> @*//TODO: Convert to Material https://samprof.github.io/MatBlazor/EditContext)*@
 	<p></p>
 	Uw bericht
 	<p></p>
-	<InputTextArea @bind-Value="Input.Content"></InputTextArea>
+	<InputTextArea @bind-Value="Input.Content"></InputTextArea> @*//TODO: Convert to Material)*@
 	<p></p>
 	<MatButton Type="submit">Verzenden</MatButton>
 </EditForm>
