--- a/Portfolio/Shared/MainLayout.razor
+++ b/Portfolio/Shared/MainLayout.razor
@@ -26,24 +26,23 @@
 		<MatHidden Breakpoint="@MatBreakpoint.SM" Direction="@MatHiddenDirection.Up" HiddenChanged="@ModelDrawerHiddenChanged">
 			<ChildContent>
 				<MatDrawer @bind-Opened="@_navMenuOpened" Mode="@MatDrawerMode.Modal">
-					<MatAppBarAdjust></MatAppBarAdjust>
+					<MatAppBarAdjust/>
 					<NavMenu />
 				</MatDrawer>
 			</ChildContent>
 			<ElseContent>
 				<MatDrawer @bind-Opened="@_navMenuOpened" Mode="@MatDrawerMode.Dismissible">
-					<MatAppBarAdjust></MatAppBarAdjust>
+					<MatAppBarAdjust/>
 					<NavMenu />
 				</MatDrawer>
 			</ElseContent>
 		</MatHidden>
 
 		<MatDrawerContent Class="mdc-theme--background">
-			<MatAppBarAdjust></MatAppBarAdjust>
-				<div style="
+			<MatAppBarAdjust/>
+			<div style="
 					padding-top: 40px;
-					padding-left: 50px;
-					padding-right: 500px;
+					padding-right: 20vw;
 					padding-bottom: 40px;
 				">
 					@Body
