--- a/Portfolio/Shared/MainLayout.razor
+++ b/Portfolio/Shared/MainLayout.razor
@@ -43,6 +43,7 @@
 			<div style="
 					padding-top: 40px;
 					padding-right: 20vw;
+					padding-left: 1vw;
 					padding-bottom: 40px;
 				">
 					@Body
