--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -1,27 +1,29 @@
-﻿<MatNavMenu Multi="true">
-	<MatNavItem Href="" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="house"></MatIcon>&nbsp; Home </MatNavItem>
+﻿<MatNavMenu Multi="false">
+
+	<MatNavItem Href="" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="house"></MatIcon>&nbsp;Home&nbsp; </MatNavItem>
+
 	<MatDivider></MatDivider>
 	<MatNavSubMenu>
 		<MatNavSubMenuHeader>
 			<MatNavItem NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="assignment"></MatIcon>&nbsp; 3rdejaars Stage</MatNavItem>
 		</MatNavSubMenuHeader>
 		<MatNavSubMenuList>
-			<MatNavItem Href="Content/Stage3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="assignment_ind"></MatIcon>Inleiding&nbsp; </MatNavItem>
+			<MatNavItem Href="Content/Stage3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="assignment_ind"></MatIcon>&nbsp;Inleiding&nbsp; </MatNavItem>
 			<MatNavSubMenu>
 				<MatNavSubMenuHeader>
 					<MatNavItem><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
 				</MatNavSubMenuHeader>
 				<MatNavSubMenuList>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />1 - SVN&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />2 - Nieuwe Technologie&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />3 - Projecten Analyseren&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />4 - Advies&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />5 - Testen&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />6 - Ideeën uitwerken&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />7 - Design Patterns&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />8 - CI/CD&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />9 - Regels & Procedures&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />10 - Design&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;1 - SVN&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;2 - Nieuwe Technologie&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;3 - Projecten Analyseren&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;4 - Advies&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;5 - Testen&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;6 - Ideeën uitwerken&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;7 - Design Patterns&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;8 - CI/CD&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;9 - Regels & Procedures&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;10 - Design&nbsp; </MatNavItem>
 				</MatNavSubMenuList>
 			</MatNavSubMenu>
 			<MatNavSubMenu>
@@ -29,13 +31,17 @@
 					<MatNavItem><MatIcon Icon="assignment_ind"></MatIcon>Bewijsmateriaal</MatNavItem>
 				</MatNavSubMenuHeader>
 				<MatNavSubMenuList>
-					<MatNavItem Href="Content/Stage3/Evidence/3" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />3 - Projectanalyse CRM&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Evidence/4" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />4 - Adviesrapport&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Evidence/6" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />6 - Technisch Document&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Evidence/3" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;3 - Projectanalyse CRM&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Evidence/4" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;4 - Adviesrapport&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Evidence/6" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;6 - Technisch Document&nbsp; </MatNavItem>
 				</MatNavSubMenuList>
 			</MatNavSubMenu>
 		</MatNavSubMenuList>
 	</MatNavSubMenu>
+
+	<MatNavItem Href="Content/Studies" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="school"></MatIcon>&nbsp;Opleidingen&nbsp; </MatNavItem>
+
 	<MatDivider></MatDivider>
-	<MatNavItem Href="Contact"><MatIcon Icon="alternate_email"></MatIcon>Contact</MatNavItem>
+
+	<MatNavItem Href="Contact"><MatIcon Icon="alternate_email"></MatIcon>&nbsp;Contact&nbsp; </MatNavItem>
 </MatNavMenu>
