--- a/Portfolio/_Imports.razor
+++ b/Portfolio/_Imports.razor
@@ -5,7 +5,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MatBlazor
+
 @using Portfolio
 @using Portfolio.Shared
 @using Portfolio.Pages
-@using MatBlazor
+@using Portfolio.Components.CardList
+@using Portfolio.Components 
