Home page card URL fix

--- a/Portfolio/Pages/Home/Home.razor
+++ b/Portfolio/Pages/Home/Home.razor
@@ -31,9 +31,9 @@
 	public static List<CardListEntry> Cards = new List<CardListEntry>(){
 		new CardListEntry(){
 			Title = "3rdejaars Stage",
-			ImageURL = "/Assets/Images/Ranshuijsen.jpg",
+			ImageURL = "Assets/Images/Ranshuijsen.jpg",
 			Subtitle = "Mijn 3rdejaars stage bij Ranshuijsen",
-			HrefURL = "/Content/Stage3"
+			HrefURL = "Content/Stage3"
 		}
 	};
 }
