--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -9,6 +9,7 @@
 		</MatNavSubMenuHeader>
 		<MatNavSubMenuList>
 			<MatNavItem Href="Content/Stage3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="assignment_ind"></MatIcon>&nbsp;Inleiding&nbsp; </MatNavItem>
+            <MatNavItem Href="Content/Stage3/Stageopdracht" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark" />&nbsp;Stageopdracht&nbsp; </MatNavItem>
 			<MatNavSubMenu>
 				<MatNavSubMenuHeader>
 					<MatNavItem><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
