--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<MatNavMenu Multi="false">
 
-	<MatNavItem Href="" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="house"></MatIcon>&nbsp;Home&nbsp; </MatNavItem>
+	<MatNavItem Href="" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="house"></MatIcon>&nbsp;Home&nbsp; </MatNavItem>
 
 	<MatDivider></MatDivider>
 	<MatNavSubMenu>
@@ -8,23 +8,23 @@
 			<MatNavItem NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="assignment"></MatIcon>&nbsp; 3rdejaars Stage</MatNavItem>
 		</MatNavSubMenuHeader>
 		<MatNavSubMenuList>
-			<MatNavItem Href="Content/Stage3" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="assignment_ind"></MatIcon>&nbsp;Inleiding&nbsp; </MatNavItem>
-            <MatNavItem Href="Content/Stage3/Stageopdracht" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="bookmark" />&nbsp;Stageopdracht&nbsp; </MatNavItem>
+			<MatNavItem Href="Content/Stage3" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="assignment_ind"></MatIcon>&nbsp;Inleiding&nbsp; </MatNavItem>
+            <MatNavItem Href="Content/Stage3/Stageopdracht" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="bookmark" />&nbsp;Stageopdracht&nbsp; </MatNavItem>
 			<MatNavSubMenu>
 				<MatNavSubMenuHeader>
 					<MatNavItem><MatIcon Icon="assignment_ind"></MatIcon>Leerdoelen</MatNavItem>
 				</MatNavSubMenuHeader>
                 <MatNavSubMenuList>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;1 - SVN&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;2 - CI/CD&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;3 - Projecten Analyseren&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;4 - Advies&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;5 - Testen&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;6 - Ideeën uitwerken&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;7 - Design Patterns&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;8 - Nieuwe Technologie&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;9 - Regels & Procedures&nbsp; </MatNavItem>
-                    <MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;10 - Design&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/1" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;1 - SVN&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/2" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;2 - CI/CD&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/3" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;3 - Projecten Analyseren&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/4" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;4 - Advies&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/5" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;5 - Testen&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/6" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;6 - Wijzigingen ontwerpen&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/7" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;7 - Design Patterns&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/8" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;8 - Nieuwe Technologie&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/9" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;9 - Regels & Procedures&nbsp; </MatNavItem>
+                    <MatNavItem Href="Content/Stage3/Leerdoelen/10" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;10 - Design&nbsp; </MatNavItem>
                 </MatNavSubMenuList>
 			</MatNavSubMenu>
 			<MatNavSubMenu>
@@ -32,14 +32,13 @@
 					<MatNavItem><MatIcon Icon="assignment_ind"></MatIcon>Bewijsmateriaal</MatNavItem>
 				</MatNavSubMenuHeader>
 				<MatNavSubMenuList>
-					<MatNavItem Href="Content/Stage3/Bewijsmateriaal/4" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;4 - Adviesrapport&nbsp; </MatNavItem>
-					<MatNavItem Href="Content/Stage3/Bewijsmateriaal/6" NavLinkMatch=NavLinkMatch.All><MatIcon Icon="bookmark" />&nbsp;6 - Technisch Document&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Bewijsmateriaal/4" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;4 - Adviesrapport&nbsp; </MatNavItem>
 				</MatNavSubMenuList>
 			</MatNavSubMenu>
 		</MatNavSubMenuList>
 	</MatNavSubMenu>
 
-	<MatNavItem Href="Content/Studies" NavLinkMatch="NavLinkMatch.All"><MatIcon Icon="school"></MatIcon>&nbsp;Opleidingen&nbsp; </MatNavItem>
+	<MatNavItem Href="Content/Studies" NavLinkMatch="NavLinkMatch.Prefix"><MatIcon Icon="school"></MatIcon>&nbsp;Opleidingen&nbsp; </MatNavItem>
 
 	<MatDivider></MatDivider>
 
