Final final changes v2. Also dependency updates.

--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -33,6 +33,7 @@
 				</MatNavSubMenuHeader>
 				<MatNavSubMenuList>
 					<MatNavItem Href="Content/Stage3/Bewijsmateriaal/4" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;4 - Adviesrapport&nbsp; </MatNavItem>
+					<MatNavItem Href="Content/Stage3/Bewijsmateriaal/7" NavLinkMatch=NavLinkMatch.Prefix><MatIcon Icon="bookmark" />&nbsp;7 - UserService&nbsp; </MatNavItem>
 				</MatNavSubMenuList>
 			</MatNavSubMenu>
 		</MatNavSubMenuList>
